se encontro que al hacer scraping a la pagina web de betsson se podria obtener el catalogo de deportes. se creo el codigo que obtiene el listado de ids de deportes, ids de regiones , ids de competitions. se espera con esto poder tener una base de datos actualizada con los deportes, ligas, existentes en betsson . tambien se añadio un codigo que filtraba los requests para obtener las apuestas para obtener los datos estructurados , pero hace falta organizarlo mejor.  tambien hace falta crear adecuada mente todo el proceso que obtenga cada periodo la actualizacion de los deportes , partidos, y apuestas en betsson asi poder luego hacer luego comparativa con otras casas de apuestas.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ betsson.co/.env
 betsson.co/config/__pycache__/
 betsson.co/betsson_co/__pycache__/
 betsson.co/exploracion_manual/__pycache__/
+venv/
