tratando de unificar la consulta en betssoon

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-betsson.co/.env
+.env
 betsson.co/config/__pycache__/
 betsson.co/betsson_co/__pycache__/
 betsson.co/exploracion_manual/__pycache__/
