Eliminando casas_de_apuestas\catalogo_de_deportes.json del historial

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ betsson.co/config/__pycache__/
 Betsson/__pycache__/__init__.cpython-312.pyc
 betsson.co/exploracion_manual/__pycache__/
 betsson.co/betsson_co/__pycache__/
+casas_de_apuestas\catalogo_de_deportes.json
 venv/
